@@ -135,6 +135,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Zachary Manning
   jrabbit
   Jelle van der Waa
+  Flavio Poletti
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
